<resources>
    <string name="app_name">Todo List</string>
    <string name="comments">Comments</string>
    <string name="title">Title</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="empty"></string>
    <string name="delete_all">Delete all</string>
    <string name="context">Context</string>
    <string name="add_sample_data">Add Sample Data</string>
    <string name="views">Views</string>
    <string name="reset_config">Reset config</string>
    <string name="start_date">Start Date</string>
    <string name="due_date">Due Date</string>
    <string name="task_view_active">Active</string>
    <string name="task_view_all">All</string>
    <string name="status">Status</string>
    <string name="sort_by">Sort By</string>
    <string name="sort_order">Sort Order</string>
    <string name="group_by">Group By</string>
    <string name="manual_order">Manual Order</string>
    <string name="add_criterion">Add Criterion</string>
    <string name="edit_task_view">Edit Task View</string>
    <string name="selected_task_views">Selected views</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="task_view_name">View Name</string>
    <string name="task_view">Task View</string>
    <string name="task_views">Task Views</string>
    <string name="start_time">Start Time</string>
    <string name="due_time">Due Time</string>
    <string name="done">Done</string>
    <string name="task_property">Property</string>
    <string name="operator">Operator</string>
    <string name="filter">Filter</string>
    <string name="edit_filter">Edit Filter</string>
    <string name="negate">Negate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="operand">Operand</string>
    <string name="true_">True</string>
    <string name="false_">False</string>
    <string name="next_action">Next Action</string>
    <string name="someday">Someday</string>
    <string name="waiting">Waiting</string>
    <string name="on_hold">On Hold</string>
    <string name="planning">Planning</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="errands">Errands</string>
    <string name="delete">Delete</string>
    <string name="move_to">Move To</string>
    <string name="clone">Clone</string>
</resources>