<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="hu.botagergo.todolist.feature_task_view.presentation.task_view.TaskViewViewModel" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="hu.botagergo.todolist.feature_task_view.presentation.task_view.TaskViewViewModel" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.LinearLayoutCompat xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/screen_padding"
            tools:context=".feature_task_view.presentation.task_view.TaskViewActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/task_view_name"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:selectAllOnFocus="true"
                    android:text="@={viewModel.name}"
                    android:textSize="@dimen/edit_text_text_size_name" />

                <ImageButton
                    android:id="@+id/imageButton_selectName"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:src="@drawable/ic_select_all"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_sort"
                    style="@style/PropertyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort_by" />

                <CheckBox
                    android:id="@+id/checkBox_manualOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manual_order" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_sortCriteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_addCriterion"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_criterion" />

            <TextView
                android:id="@+id/textView_group"
                style="@style/PropertyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_by" />

            <LinearLayout
                android:id="@+id/linearLayout_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/button_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/group_by"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:longClickable="false" />

                <ImageButton
                    android:id="@+id/imageButton_cancelGroup"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:src="@drawable/ic_remove"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView_filter"
                style="@style/PropertyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter" />

            <Button
                android:text="Create criterion"
                android:visibility="gone"
                android:id="@+id/button_createCriterion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_filterCriteria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>