<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
        <import type="hu.botagergo.todolist.feature_task.data.Task" />
        <import type="java.time.LocalDate" />
        <import type="java.time.LocalTime" />
        <import type="java.time.ZoneId" />
        <import type="java.time.format.DateTimeFormatter" />
        <import type="java.time.format.FormatStyle" />
        <import type="hu.botagergo.todolist.R" />

        <variable
            name="viewModel"
            type="hu.botagergo.todolist.feature_task.presentation.task.TaskViewModel" />

        <variable
            name="handlers"
            type="hu.botagergo.todolist.feature_task.presentation.task.TaskFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="@dimen/screen_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/PropertyTextView"
                android:text="@string/title" />

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:text="@={viewModel.title}" />

            <TextView
                style="@style/PropertyTextView"
                android:text="@string/comments" />

            <EditText
                android:id="@+id/editText_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/comments"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textCapSentences"
                android:minHeight="48dp"
                android:text="@={viewModel.comments}" />

            <TextView
                style="@style/PropertyTextView"
                android:text="@string/status" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/button_status"
                    style="@style/ClickableEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:onClick="@{handlers::onStatusClicked}"
                    android:hint="@string/status"
                    android:text="@{viewModel.status!=null?viewModel.status.value:R.string.empty}"
                    tools:ignore="Autofill" />

                <ImageButton
                    android:id="@+id/imageButton_cancelStatus"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:onClick="@{handlers::onCancelStatusClicked}"
                    android:src="@drawable/ic_remove"
                    android:visibility="@{viewModel.status == null?View.GONE:View.VISIBLE}"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                style="@style/PropertyTextView"
                android:text="@string/context" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/button_context"
                    style="@style/ClickableEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:onClick="@{handlers::onContextClicked}"
                    android:hint="@string/context"
                    android:text="@{viewModel.context!=null?viewModel.context.value:R.string.empty}"
                    tools:ignore="Autofill" />

                <ImageButton
                    android:id="@+id/imageButton_cancelContext"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:onClick="@{handlers::onCancelContextClicked}"
                    android:src="@drawable/ic_remove"
                    android:visibility="@{viewModel.context == null?View.GONE:View.VISIBLE}"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                style="@style/PropertyTextView"
                android:text="@string/start_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/button_startDate"
                    style="@style/ClickableEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="date"
                    android:onClick="@{handlers::onStartDateClicked}"
                    android:hint="@string/date"
                    android:text="@{viewModel.startDate!=null?DateTimeFormatter.ofLocalizedDate(FormatStyle.FULL).format(viewModel.startDate):null}"
                    tools:ignore="Autofill" />

                <ImageButton
                    android:id="@+id/imageButton_cancelStartDate"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:onClick="@{handlers::onCancelDateClicked}"
                    android:src="@drawable/ic_remove"
                    android:visibility="@{viewModel.startDate == null?View.GONE:View.VISIBLE}"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                style="@style/PropertyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/button_startTime"
                    style="@style/ClickableEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:inputType="time"
                    android:onClick="@{handlers::onStartTimeClicked}"
                    android:hint="@string/time"
                    android:text="@{viewModel.startTime!=null?DateTimeFormatter.ofLocalizedTime(FormatStyle.FULL).withZone(ZoneId.systemDefault()).format(viewModel.startTime):null}"
                    tools:ignore="Autofill" />

                <ImageButton
                    android:id="@+id/imageButton_cancelStartTime"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:onClick="@{handlers::onCancelDateClicked}"
                    android:src="@drawable/ic_remove"
                    android:visibility="@{viewModel.startTime == null?View.GONE:View.VISIBLE}"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                style="@style/PropertyTextView"
                android:text="@string/due_date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/button_dueDate"
                    style="@style/ClickableEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="date"
                    android:onClick="@{handlers::onDueDateClicked}"
                    android:hint="@string/date"
                    android:text="@{viewModel.dueDate!=null?DateTimeFormatter.ofLocalizedDate(FormatStyle.FULL).format(viewModel.dueDate):null}"
                    tools:ignore="Autofill" />

                <ImageButton
                    android:id="@+id/imageButton_cancelDueDate"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:onClick="@{handlers::onCancelDateClicked}"
                    android:src="@drawable/ic_remove"
                    android:visibility="@{viewModel.dueDate == null?View.GONE:View.VISIBLE}"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                style="@style/PropertyTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/button_dueTime"
                    style="@style/ClickableEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:inputType="time"
                    android:onClick="@{handlers::onDueTimeClicked}"
                    android:hint="@string/time"
                    android:text="@{viewModel.dueTime!=null?DateTimeFormatter.ofLocalizedTime(FormatStyle.FULL).withZone(ZoneId.systemDefault()).format(viewModel.dueTime):null}"
                    android:importantForAutofill="no" />

                <ImageButton
                    android:id="@+id/imageButton_cancelDueTime"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:onClick="@{handlers::onCancelDateClicked}"
                    android:src="@drawable/ic_remove"
                    android:visibility="@{viewModel.dueTime == null?View.GONE:View.VISIBLE}"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>